# console-assert

./: .gitignore  CMakeLists.txt  README.md  asserts.h  install.bat  install.sh  main.cpp  main_win32.cpp  strings.h  test.bat
samples/: CMakeLists.txt  rand-arr-order.cpp
